--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -18,12 +19,20 @@
                 </div>
             </div>
             <div class="navbar-right">
+
+                <!-- Hamburger button -->
+                <div class="menu-toggle" id="mobile-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+
                 <ul class="navbar-ul">
                     <li> <a href="#"> Home</a></li>
                     <li> <a href="#"> About</a></li>
                     <li> <a href="#"> Resume</a></li>
                     <li> <a href="#"> Project</a></li>
                     <li> <a href="#"> Contact</a></li>
+
 
 
                 </ul>
