--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -25,21 +25,42 @@
                     <i class="fas fa-bars"></i>
                 </div>
 
-
                 <ul class="navbar-ul">
                     <li> <a href="#"> Home</a></li>
                     <li> <a href="#"> About</a></li>
                     <li> <a href="#"> Resume</a></li>
                     <li> <a href="#"> Project</a></li>
                     <li> <a href="#"> Contact</a></li>
-
-
-
                 </ul>
             </div>
-
         </div>
     </nav>
+
+    <section class="Home">
+        <div class="home-left">
+            <div class="name">
+                <span class="home-span1">HELLO</span>
+                <H1>I'm, <span class="home-span2">Ajay <br>Nalwade</span></H1>
+                <p id="typing-animation"></p>
+            </div>
+
+
+
+
+        </div>
+        <div class="home-right">
+            <img src="ajay.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="About"></section>
+
+    <section class="Experinece"></section>
+
+    <section class="Project"></section>
+
+    <section class="Conatct"></section>
 
 
 
