about and experience added

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -26,9 +26,9 @@
                 </div>
 
                 <ul class="navbar-ul">
-                    <li> <a href="#"> Home</a></li>
-                    <li> <a href="#"> About</a></li>
-                    <li> <a href="#"> Resume</a></li>
+                    <li> <a href="#home"> Home</a></li>
+                    <li> <a href="#about"> About</a></li>
+                    <li> <a href="#"> Experinece</a></li>
                     <li> <a href="#"> Project</a></li>
                     <li> <a href="#"> Contact</a></li>
                 </ul>
@@ -36,12 +36,15 @@
         </div>
     </nav>
 
-    <section class="Home">
+    <section class="Home" id="home">
         <div class="home-left">
             <div class="name">
                 <span class="home-span1">HELLO</span>
                 <H1>I'm, <span class="home-span2">Ajay <br>Nalwade</span></H1>
                 <p id="typing-animation"></p>
+                <p class="para1">FRESHER</p>
+                <button class="btn btn-1">Linkdin</button>
+                <button class="btn btn-2">Github</button>
             </div>
 
 
@@ -54,9 +57,60 @@
 
     </section>
 
-    <section class="About"></section>
+    <section class="About" id="about">
+        <div class="about-us">
+            <h1>About us</h1>
+            <hr id="hr-1">
+            <p class="para-2">B.E. (Computer) graduate with a strong foundation in MERN Stack development. Eager to
+                build and deploy
+                robust, scalable web applications, leveraging expertise in JavaScript, React.js, Node.js, Express.js,
+                and MongoDB. Have ability to contribute across the entire development lifecycle, from conceptualization
+                to deployment, with a keen eye for performance optimization and user experience. Committed to continuous
+                learning and solving complex technical challenges.
+            </p>
+            <div class="about-info">
+                <div class="about-topic">
+                    <p>Profile:</p>
+                    <p>Domain:</p>
+                    <p>Education:</p>
+                    <p>Language:</p>
+                    <p>Other Skills:</p><br><br>
+                    <p>Interest:</p>
+                </div>
+                <div class="about-content">
+                    <p>MERN Stack Developer</p>
+                    <p>Retail, Ecommerce, BFSI & Digital Marketing</p>
+                    <p>B.E (Computer)</p>
+                    <p>English, Hindi, Marathi</p>
+                    <p>MongoDB, Express.js,React.js,JavaScript (ES6+),HTML5, CSS3,Bootstrap,&RESTful APIs</p>
+                    <p>Traveling, Travel Photography, Chess</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <section class="Experinece"></section>
+    <section class="Experience">
+        <h1>Experience</h1>
+        <hr id="hr-2">
+        <div class="exp-main">
+            <div class="exp-1">
+                <h1>read</h1>
+            </div>
+             <div class="exp-1">
+                <h1>read</h1>
+            </div>
+            <div class="exp-1">
+                <h1>read</h1>
+            </div>
+            <div class="exp-1">
+                <h1>read</h1>
+            </div>
+            <div class="exp-1">
+                <h1>read</h1>
+            </div>
+        </div>
+
+    </section>
 
     <section class="Project"></section>
 
