experience and education added

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -28,7 +28,7 @@
                 <ul class="navbar-ul">
                     <li> <a href="#home"> Home</a></li>
                     <li> <a href="#about"> About</a></li>
-                    <li> <a href="#"> Experinece</a></li>
+                    <li> <a href="#experience"> Experience</a></li>
                     <li> <a href="#"> Project</a></li>
                     <li> <a href="#"> Contact</a></li>
                 </ul>
@@ -43,8 +43,8 @@
                 <H1>I'm, <span class="home-span2">Ajay <br>Nalwade</span></H1>
                 <p id="typing-animation"></p>
                 <p class="para1">FRESHER</p>
-                <button class="btn btn-1">Linkdin</button>
-                <button class="btn btn-2">Github</button>
+                <button class="btn btn-1"> <a href="https://www.linkedin.com/in/ajay-nalwade-9027a4289/"> Linkdin</a></button>
+                <button class="btn btn-2"> <a href="https://github.com/Ajay76401">Github</a></button>
             </div>
 
 
@@ -89,27 +89,63 @@
         </div>
     </section>
 
-    <section class="Experience">
-        <h1>Experience</h1>
+    <section class="Experience" id="experience">
+        <h1 id="exp-title">Experience</h1>
         <hr id="hr-2">
         <div class="exp-main">
             <div class="exp-1">
-                <h1>read</h1>
-            </div>
-             <div class="exp-1">
-                <h1>read</h1>
-            </div>
-            <div class="exp-1">
-                <h1>read</h1>
-            </div>
-            <div class="exp-1">
-                <h1>read</h1>
-            </div>
-            <div class="exp-1">
-                <h1>read</h1>
+                <div class="exp-2">
+                    <h1 class="date">DEC 2023 – FEB 2024</h1>
+                    <h1 class="position"> Web Developer</h1>
+                    <h3 class="company">Nerdtech</h3>
+                    <p>Digital marketing agency specializing in branding, web design, mobile app development, and social
+                        media marketing.
+                    </p>
+                    <ul>
+                        <li>Designed and developed responsive web pages, gaining hands-on experience in front-end
+                            development.</li>
+                        <li>Utilized HTML, CSS, and Bootstrap to create visually appealing and user-friendly website
+                            interfaces.</li>
+                        <li>Contributed to enhancing user experience through effective layout and styling implementation
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
+    </section>
+
+    <section class="education">
+        <h1 id="edu-title">Education</h1>
+        <hr id="hr-3">
+        <div class="edu-main">
+            <div class="edu-1">
+                <div class="edu-2">
+                    <h1 class="date">2021 - 2025</h1>
+                    <h1 class="position">Bachelor of Engineering (Computer)</h1>
+                    <h3 class="college">Loknete Gopinathji Munde Institute of Engineering Education & Research</h3>
+                    <p>Grade: Higher Second Class
+                    </p>
+                </div>
+            </div>
+            <div class="edu-1">
+                <div class="edu-2">
+                    <h1 class="date">2019 - 2021</h1>
+                    <h1 class="position">Higher Secondary School</h1>
+                    <h3 class="college">G.M.D.ART'S,B.W.COMMERCE AND SCIENCE COLLEGE ...</h3>
+                    <p>Grade: First class  </p>
+                </div>
+            </div>
+            <div class="edu-1">
+                <div class="edu-2">
+                    <h1 class="date">2017-2019</h1>
+                    <h1 class="position">Bachelor of Engineering (Computer)</h1>
+                    <h3 class="college">Adrash English Medium School,Sinnar,Nashik,422103</h3>
+                    <p>Grade: Distinction </p>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <section class="Project"></section>
