--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -29,7 +29,7 @@
                     <li> <a href="#home"> Home</a></li>
                     <li> <a href="#about"> About</a></li>
                     <li> <a href="#experience"> Experience</a></li>
-                    <li> <a href="#"> Project</a></li>
+                    <li> <a href="#Project"> Project</a></li>
                     <li> <a href="#"> Contact</a></li>
                 </ul>
             </div>
@@ -43,7 +43,8 @@
                 <H1>I'm, <span class="home-span2">Ajay <br>Nalwade</span></H1>
                 <p id="typing-animation"></p>
                 <p class="para1">FRESHER</p>
-                <button class="btn btn-1"> <a href="https://www.linkedin.com/in/ajay-nalwade-9027a4289/"> Linkdin</a></button>
+                <button class="btn btn-1"> <a href="https://www.linkedin.com/in/ajay-nalwade-9027a4289/">
+                        Linkdin</a></button>
                 <button class="btn btn-2"> <a href="https://github.com/Ajay76401">Github</a></button>
             </div>
 
@@ -133,7 +134,7 @@
                     <h1 class="date">2019 - 2021</h1>
                     <h1 class="position">Higher Secondary School</h1>
                     <h3 class="college">G.M.D.ART'S,B.W.COMMERCE AND SCIENCE COLLEGE ...</h3>
-                    <p>Grade: First class  </p>
+                    <p>Grade: First class </p>
                 </div>
             </div>
             <div class="edu-1">
@@ -146,11 +147,48 @@
             </div>
 
         </div>
+        <div class=" btn btn-cv"><a href="">DOWNLOAD CV</a></div>
     </section>
 
-    <section class="Project"></section>
+    <section class="Project" id="Project">
+        <h1 class="project-title"> Projects</h1>
+        <div class="project-wrap">
+            <div class="pro-1">
+ 
+                <img src="https://tse3.mm.bing.net/th/id/OIP.OGpZGEMVCq4G01aHyVCVXQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3"
+                    alt="">
+                <p>AI Based Job Creacker</p>
+            </div>
+            <div class="pro-1">
+                <img src="https://tse3.mm.bing.net/th/id/OIP.OGpZGEMVCq4G01aHyVCVXQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3"
+                    alt="">
+                <p>Food Website</p>
+            </div>
+            <div class="pro-1">
 
-    <section class="Conatct"></section>
+                <img src="https://tse3.mm.bing.net/th/id/OIP.OGpZGEMVCq4G01aHyVCVXQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3"
+                    alt="">
+                <p>AI Based Job Cracker</p>
+            </div>
+            <div class="pro-1">
+
+                <img src="https://tse3.mm.bing.net/th/id/OIP.OGpZGEMVCq4G01aHyVCVXQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3"
+                    alt="">
+                <p>AI Based Job Cracker</p>
+            </div>
+            <div class="pro-1">
+
+                <img src="https://tse3.mm.bing.net/th/id/OIP.OGpZGEMVCq4G01aHyVCVXQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3"
+                    alt="">
+                <p>AI Based Job Cracker</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="more-pro">
+             
+    </section>
+    <section class="Contact"></section>
 
 
 
