--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -30,7 +30,7 @@
                     <li> <a href="#about"> About</a></li>
                     <li> <a href="#experience"> Experience</a></li>
                     <li> <a href="#Project"> Project</a></li>
-                    <li> <a href="#"> Contact</a></li>
+                    <li> <a href="#contact-nav"> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -154,7 +154,7 @@
         <h1 class="project-title"> Projects</h1>
         <div class="project-wrap">
             <div class="pro-1">
- 
+
                 <img src="https://tse3.mm.bing.net/th/id/OIP.OGpZGEMVCq4G01aHyVCVXQHaEK?rs=1&pid=ImgDetMain&o=7&rm=3"
                     alt="">
                 <p>AI Based Job Creacker</p>
@@ -186,9 +186,43 @@
     </section>
 
     <section class="more-pro">
-             
+        <div class="more-main">
+            <h1>More projects on <span>Github</span></h1>
+            <h3>I love to solve problems & uncover The Logic Behind It</h3>
+            <button class=" btn btn-cv"><a href=""> Github</a></button>
+        </div>
+
     </section>
-    <section class="Contact"></section>
+
+    <section class="Contact" id="contact-nav">
+        <h1 class="contact-title"> Contact</h1>
+        <hr id="hr-3">
+        <div class="contact-links">
+            <div class="contact-1">
+                <div class="con-back"><ion-icon class="icon" name="call-outline"></ion-icon> </div>
+                <h3>Contact Number</h3>
+                <p>+9356485749</p>
+            </div>
+
+            <div class="contact-1">
+                <div class="con-back"> <ion-icon class="icon" name="home-outline"></ion-icon></div>
+                <h3>Address</h3>
+                <p>Nashik,Maharashtra</p>
+            </div>
+
+            <div class="contact-1">
+                <div class="con-back"><ion-icon class="icon" name="mail-outline"></ion-icon></div>
+                <h3>Email</h3>
+                <p>ajaynalwade321@gmail.com</p>
+            </div>
+
+            <div class="contact-1">
+                <div class="con-back"><ion-icon class="icon"  name="earth-outline"></ion-icon></div>
+                <h3>CDownload Resume</h3>
+                <p>Link</p>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -202,6 +236,8 @@
 
 
     <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
