added some responsivness

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="query.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -218,10 +219,24 @@
 
             <div class="contact-1">
                 <div class="con-back"><ion-icon class="icon"  name="earth-outline"></ion-icon></div>
-                <h3>CDownload Resume</h3>
+                <h3>Download Resume</h3>
                 <p>Link</p>
             </div>
         </div>
+        <div class="channels">
+            
+            <Span>Find me on</Span>
+            <a href=""><ion-icon class="contact-icon" name="logo-youtube"></ion-icon>  </a>
+            <a href=""><ion-icon class="contact-icon" name="logo-youtube"></ion-icon></a>
+            
+            <a href=""> <ion-icon class="contact-icon" name="logo-twitter"></ion-icon></a>
+            <a href=""><ion-icon class="contact-icon" name="logo-instagram"></ion-icon></a>
+
+        </div>
+    </section>
+
+    <section class="footer">
+        <p>Copyright @Copyright 2025 All rights reserved</p>
     </section>
 
 
