--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -16,29 +16,149 @@
 
 <body>
     <nav>
-        <div class="nav-logo"><a href="#">Develo<span>e</span>r</a></div>
+        <div class="nav-logo"><a href="#">Develop<span>e</span>r</a></div>
     </nav>
     <header>
         <div class="section-container header-container">
             <p><span>Hello</span>I'm</p>
-            <h1>Raju Sharma</h1>
+            <h1>Ajay Nalwade</h1>
             <h1 class="section-title">Web <span>Developer</span></h1>
             <p>Welcome to my Portfolio, Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus ipsa iusto
                 eius totam vitae! Molestias, laborum minus. Iste, quas.</p>
             <div class="action-btns">
                 <button class="btn">Say Hello!</button>
-                
-                <a href="#">Vedio</a>
-                <div class="play">
-                    <i class="ri-play-fill"></i>
-                </div>
-                <span>Watch My Videos</span>
-               
+
+                <a href="#" class="video">
+                    <div class="play">
+                        <i class="ri-play-fill"></i>
+                    </div>
+                    <span>Watch My Videos</span>
+                </a>
             </div>
         </div>
 
     </header>
-    <section class="about"></section>
+    <section class="about">
+        <div class="section-container about-container">
+            <div class="about-img">
+                <img src="images.jpeg" alt="">
+            </div>
+            <div class="about-content">
+                <h2 class="section-title">About <span>Me</span></h2>
+                <p class="section-subtitle">Creative Web Developer</p>
+                <p class="about-details">
+                    As Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe autem maxime doloribus velit
+                    ratione aliquam laboriosam, neque sapiente nulla ad? Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Nam nesciunt magni velit assumenda blanditiis error doloremque animi ex magnam
+                    saepe. As Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe autem maxime doloribus
+                    velit
+                    ratione aliquam laboriosam, neque sapiente nulla ad? Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Nam nesciunt magni velit assumenda blanditiis error doloremque animi ex magnam
+                    saepe.
+                </p>
+                <button class="btn">More About</button>
+
+            </div>
+        </div>
+    </section>
+    <section class="service">
+        <div class="section-container service-container">
+            <p class="section-subtitle">What I Offer</p>
+            <h2 class="section-title"><span>My</span>Services</h2>
+            <div class="service-grid">
+                <div class="service-card">
+                    <i class="ri-smartphone-line"></i>
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia voluptatem provident
+                        mollitia, neque nesciunt eius assumenda vitae aliquid, tempore aliquam natus laboriosam, esse
+                        minima molestiae sequi veritatis nemo asperiores. Accusantium, ipsam. Quo consequuntur
+                        repudiandae quam minima iste quia minus maiores.
+                    </p>
+                    <a href="#" class="read-more">Read More ...</a>
+                </div>
+                <div class="service-card">
+                    <i class="ri-pen-nib-line"></i>
+                    <h4>Creative Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia voluptatem provident
+                        mollitia, neque nesciunt eius assumenda vitae aliquid, tempore aliquam natus laboriosam, esse
+                        minima molestiae sequi veritatis nemo asperiores. Accusantium, ipsam. Quo consequuntur
+                        repudiandae quam minima iste quia minus maiores.
+                    </p>
+                    <a href="#" class="read-more">Read More ...</a>
+                </div>
+                <div class="service-card">
+                    <i class="ri-code-s-slash-line"></i>
+                    <h4>Web Developer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia voluptatem provident
+                        mollitia, neque nesciunt eius assumenda vitae aliquid, tempore aliquam natus laboriosam, esse
+                        minima molestiae sequi veritatis nemo asperiores. Accusantium, ipsam. Quo consequuntur
+                        repudiandae quam minima iste quia minus maiores.
+                    </p>
+                    <a href="#" class="read-more">Read More ...</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="project">
+        <div class="section-container projecct-container">
+            <p class="section-subtitle">Portfolio</p>
+            <h2 class="section-title"><span>Latest</span> </h2>
+            <div class="project-grid">
+
+                <div class="project-card">
+                    <img src="images.jpeg" alt="">
+                </div>
+                <div class="project-card">
+                    <img src="images.jpeg" alt="">
+                </div>
+
+                <div class="project-card">
+                    <img src="images.jpeg" alt="">
+                </div>
+                <div class="project-card">
+                    <img src="images.jpeg" alt="">
+                </div>
+                <div class="project-card">
+                    <img src="images.jpeg" alt="">
+                </div>
+                <div class="project-card">
+                    <img src="images.jpeg" alt="">
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="section-container footer-container">
+            <div class="footer-content">
+                <h2 class="section-title">Conatct<span>Me!</span></h2>
+                <p class="section-subtitle">If You have Any Project in mind</p>
+                <div class="footer-details">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti corrupti voluptatem qui laborum
+                        labore velit aliquid eaque nostrum tempore, minima dolore totam quod itaque, voluptates sed
+                        veritatis? Doloribus recusandae id provident pariatur harum deserunt architecto, at odio vero,
+                        sequi animi?
+                    </p>
+                    <p>Krishna avilla</p>
+                    <p>Devoli Road</p>
+                    <p>tonk</p>
+                </div>
+                <div class="social-icons">
+                    <a href=""><i class="ri-facebook-fill"></i></a>
+                    <a href=""><i class="ri-mail-line"></i></a>
+                    <a href=""><i class="ri-instagram-fill"></i></a>
+                    <a href=""><i class="ri-linkedin-fill"></i></a>
+                </div>
+            </div>
+            <form action="" class="footer-form">
+                <input type="text" name="" id="">
+                <input type="email" name="" id="">
+                <input type="number" name="" id="">
+                <textarea class="30" rows="10" placeholder="Your Idea"> </textarea>
+            </form>
+        </div>
+    </footer>
 </body>
 
 </html>
