--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -41,7 +41,7 @@
     <section class="about">
         <div class="section-container about-container">
             <div class="about-img">
-                <img src="images.jpeg" alt="">
+                <img src="assests/profile.jpg" alt="">
             </div>
             <div class="about-content">
                 <h2 class="section-title">About <span>Me</span></h2>
@@ -106,23 +106,23 @@
             <div class="project-grid">
 
                 <div class="project-card">
-                    <img src="images.jpeg" alt="">
+                    <img src="assests/portfolio-2.jpeg" alt="">
                 </div>
                 <div class="project-card">
-                    <img src="images.jpeg" alt="">
+                    <img src="assests/portfolio-2.jpeg"alt="">
                 </div>
 
                 <div class="project-card">
-                    <img src="images.jpeg" alt="">
+                    <img src="assests/portfolio-1.jpeg" alt="">
                 </div>
                 <div class="project-card">
-                    <img src="images.jpeg" alt="">
+                    <img src="assests/portfolio-3.jpg" alt="">
                 </div>
                 <div class="project-card">
-                    <img src="images.jpeg" alt="">
+                    <img src="assests/portfolio-3.jpg" alt="">
                 </div>
                 <div class="project-card">
-                    <img src="images.jpeg" alt="">
+                    <img src="assests/portfolio-3.jpg" alt="">
                 </div>
 
             </div>
@@ -145,17 +145,18 @@
                     <p>tonk</p>
                 </div>
                 <div class="social-icons">
-                    <a href=""><i class="ri-facebook-fill"></i></a>
-                    <a href=""><i class="ri-mail-line"></i></a>
-                    <a href=""><i class="ri-instagram-fill"></i></a>
-                    <a href=""><i class="ri-linkedin-fill"></i></a>
+                    <a href="" class="icon"><i class="ri-facebook-fill"></i></a>
+                    <a href="" class="icon"><i class="ri-mail-line"></i></a>
+                    <a href="" class="icon"><i class="ri-instagram-fill"></i></a>
+                    <a href="" class="icon"><i class="ri-linkedin-fill"></i></a>
                 </div>
             </div>
             <form action="" class="footer-form">
-                <input type="text" name="" id="">
-                <input type="email" name="" id="">
-                <input type="number" name="" id="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email Address">
+                <input type="number" placeholder="Your Phone Number">
                 <textarea class="30" rows="10" placeholder="Your Idea"> </textarea>
+                <button type="submit" class="btn">Send Messsage</button>
             </form>
         </div>
     </footer>
