--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
 
-     <!-- <section class="Home" id="home">
+      <!-- <section class="Home" id="home">
         <div class="home-left">
             <div class="name">
                 <span class="home-span1">HELLO</span>
@@ -57,9 +57,9 @@
             <img src="ajay.png" alt="">
         </div>
 
-    </section> -->
+    </section>  -->
 
-     <!-- <section class="About" id="about">
+      <!-- <section class="About" id="about">
         <div class="about-us">
             <h1>About us</h1>
             <hr id="hr-1">
@@ -91,7 +91,10 @@
         </div>
     </section>   -->
 
-    <!-- <section class="Experience" id="experience">
+
+
+    
+ <section class="Experience" id="experience">
         <h1 id="exp-title">Experience</h1>
         <hr id="hr-2">
         <div class="exp-main">
@@ -115,9 +118,9 @@
             </div>
         </div>
 
-    </section> -->
+    </section>  
 
-    <!-- <section class="education">
+      <section class="education">
         <h1 id="edu-title">Education</h1>
         <hr id="hr-3">
         <div class="edu-main">
@@ -149,9 +152,9 @@
 
         </div>
         <div class=" btn btn-cv"><a href="">DOWNLOAD CV</a></div>
-    </section> -->
+    </section>  
 
-    <!-- <section class="Project" id="Project">
+     <section class="Project" id="Project">
         <h1 class="project-title"> Projects</h1>
         <div class="project-wrap">
             <div class="pro-1">
@@ -184,18 +187,18 @@
                 <p>AI Based Job Cracker</p>
             </div>
         </div>
-    </section> -->
+    </section>  
 
-    <!-- <section class="more-pro">
+      <section class="more-pro">
         <div class="more-main">
             <h1>More projects on <span>Github</span></h1>
             <h3>I love to solve problems & uncover The Logic Behind It</h3>
             <button class=" btn btn-cv"><a href=""> Github</a></button>
         </div>
 
-    </section> -->
+    </section> 
 
-     <section class="Contact" id="contact-nav">
+      <section class="Contact" id="contact-nav">
         <h1 class="contact-title"> Contact</h1>
         <hr id="hr-3">
         <div class="contact-links">
@@ -233,7 +236,7 @@
             <a href=""><ion-icon class="contact-icon" name="logo-instagram"></ion-icon></a>
 
         </div>
-    </section>  
+    </section>   
 
     <section class="footer">
         <p>Copyright @Copyright 2025 All rights reserved</p>
